# rinex-data-quality-backend

./: .gitignore  .gitlab-ci.yml  README.md  config.py  custom_logger.py  docker-compose.yml  dockerfile  dockerfile.redis  functions.py  main.py  pyproject.toml
app/: custom_logger.py  pyproject.toml
app/parsers/: parser_manager.py  satellite_parser.py
parsers/: parser_manager.py  rinex_parser.py  satellite_parser.py
scripts/: build_app_image.sh  build_redis_image.sh  install_docker.sh  run_app.sh
