[tool.poetry]
name = "rinex-data-quality-backend"
version = "0.1.0"
description = ""
authors = ["Yuri-ga1 <regota09@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
numpy = "^2.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
